Upgraded to Java 11, added GroupBy example