@@ -2,5 +2,5 @@
  * User: victor    Date: 12/17/17   Time: 12:13 PM
  */
 module LearnJava9 {
-    requires jdk.incubator.httpclient;
+    requires  java.net.http;
 }
